--- a/backend/app/agents/personal_finance/分析思路.md
+++ b/backend/app/agents/personal_finance/分析思路.md
@@ -1,9 +1,93 @@
-# 数据准备
-- 当前日期 2025-01-13 ：15:00:00
-- 是否节假日/特殊日期
-- 重要财报日历信息
-- 大盘数据 
-  - 沪指/深成指/创业板指/科创50/北证50/上证50/沪深300/中证500/恒生/恒生科技；计算 20 日新高/新低、连阳/连阴、量能相对 5/20 日均、北向/南向净流、避险强度
-  - 板块/概念/ETF：申万一级/二级、概念榜、主题 ETF（科技/消费/券商/有色/黄金/白银）；热度分基于涨跌幅、资金净流、涨跌家数、封板/炸板率（如可得）。
-- 新闻/热点
+# precontext_agent
+## 负责上下文数据整理和获取
+### 市场大盘行情数据&热点 + 持仓情况 + 过往投资经验&复盘(之前做的决策的结果分析和经验总结) 
+```
+## 投资组合摘要 (Portfolio)
+- 总资产净值: 347660.08
+- 持仓总市值: 317433.60000000003
+- 现金余额: 30226.47999999998
+- 持仓明细:
+  - **513820** (港股红利ETF): Qty=87600.0, Price=1.202, Val=105295.2
+  - **001696** (宗胜动力): Qty=4400.0, Price=22.91, Val=100804.0
+  - **000977** (浪潮信息): Qty=800.0, Price=68.09, Val=54472.0
+  - **002230** (科大讯飞): Qty=800.0, Price=63.7, Val=50960.0
+  - **513100** (纳指ETF): Qty=3100.0, Price=1.904, Val=5902.4
 
+## 决策复盘
+(无活跃历史决策)
+
+## 重要提醒 (Reminders)
+- 关注半导体行业的主力资金流向，近期净流入较多，可能存在机会
+- 港股红利ETF和纳指ETF的持仓比例较高，建议关注其后续表现
+- 近期市场波动较大，建议保持谨慎，关注宏观经济数据发布
+
+## 历史经验 (Lessons)
+- **关注主力资金流向**: 主力资金净流入的行业或个股通常有较强的短期表现潜力，可作为短期交易参考。
+- **分散持仓风险**: 当前持仓中港股红利ETF和纳指ETF占比较高，建议适当分散以降低单一资产波动风险。
+- **宏观经济数据影响**: 宏观经济数据（如GDP、CPI、PMI）对市场情绪和资金流向有显著影响，需密切关注
+。
+## 指数概览
+### A股指数（总成交额3.03万亿，较前日增长+4.16%(前日2.91万亿)，北向资金 N/A，南向资金流入0.94亿）
+- 上证指数: 4101.91 (-0.26%)
+- 深证成指: 14281.08 (-0.18%)
+- 创业板指: 3361.02 (-0.2%)
+- 沪深300: 4731.87 (-0.41%)
+### 港股指数
+- 恒生指数: 26844.961 (0.0%)
+- 恒生科技: 5822.18 (0.0%)
+### 美股指数
+- 纳斯达克: 23515.3867 (-0.06%)
+- 道琼斯: 49359.3281 (-0.17%)
+- 标普500: 6940.0098 (-0.06%)
+## 指数历史
+### CN 指数历史
+- 000001: [{"date": "2026-01-08", "close": 4082.98, "change": "-0.07%"}, {"date": "2026-01-09", "close": 4120.43, "change": "0.92%"}, {"date": "2026-01-12", "close": 4165.29, "change": "1.09%"}, {"date": "2026-01-13", "close": 4138.76, "change": "-0.64%"}, {"date": "2026-01-14", "close": 4126.09, "change": "-0.31%"}, {"date": "2026-01-15", "close": 4112.6, "change": "-0.33%"}, {"date": "2026-01-16", "close": 4101.91, "change": "-0.26%"}]
+- 399001: [{"date": "2026-01-08", "close": 13959.48, "change": "-0.51%"}, {"date": "2026-01-09", "close": 14120.15, "change": "1.15%"}, {"date": "2026-01-12", "close": 14366.91, "change": "1.75%"}, {"date": "2026-01-13", "close": 14169.4, "change": "-1.37%"}, {"date": "2026-01-14", "close": 14248.6, "change": "0.56%"}, {"date": "2026-01-15", "close": 14306.73, "change": "0.41%"}, {"date": "2026-01-16", "close": 14281.08, "change": "-0.18%"}]
+- 399006: [{"date": "2026-01-08", "close": 3302.31, "change": "-0.82%"}, {"date": "2026-01-09", "close": 3327.81, "change": "0.77%"}, {"date": "2026-01-12", "close": 3388.34, "change": "1.82%"}, {"date": "2026-01-13", "close": 3321.89, "change": "-1.96%"}, {"date": "2026-01-14", "close": 3349.14, "change": "0.82%"}, {"date": "2026-01-15", "close": 3367.92, "change": "0.56%"}, {"date": "2026-01-16", "close": 3361.02, "change": "-0.20%"}]
+- 000688: [{"date": "2026-01-08", "close": 1455.17, "change": "0.82%"}, {"date": "2026-01-09", "close": 1475.97, "change": "1.43%"}, {"date": "2026-01-12", "close": 1511.84, "change": "2.43%"}, {"date": "2026-01-13", "close": 1469.57, "change": "-2.80%"}, {"date": "2026-01-14", "close": 1500.91, "change": "2.13%"}, {"date": "2026-01-15", "close": 1493.95, "change": "-0.46%"}, {"date": "2026-01-16", "close": 1514.07, "change": "1.35%"}]
+- 000300: [{"date": "2026-01-08", "close": 4737.65, "change": "-0.82%"}, {"date": "2026-01-09", "close": 4758.92, "change": "0.45%"}, {"date": "2026-01-12", "close": 4789.92, "change": "0.65%"}, {"date": "2026-01-13", "close": 4761.03, "change": "-0.60%"}, {"date": "2026-01-14", "close": 4741.93, "change": "-0.40%"}, {"date": "2026-01-15", "close": 4751.43, "change": "0.20%"}, {"date": "2026-01-16", "close": 4731.87, "change": "-0.41%"}]
+- 000905: [{"date": "2026-01-08", "close": 7894.54, "change": "0.25%"}, {"date": "2026-01-09", "close": 8056.69, "change": "2.05%"}, {"date": "2026-01-12", "close": 8249.13, "change": "2.39%"}, {"date": "2026-01-13", "close": 8143.28, "change": "-1.28%"}, {"date": "2026-01-14", "close": 8227.7, "change": "1.04%"}, {"date": "2026-01-15", "close": 8223.27, "change": "-0.05%"}, {"date": "2026-01-16", "close": 8232.67, "change": "0.11%"}]
+- 899050: [{"date": "2026-01-08", "close": 1508.38, "change": "0.81%"}, {"date": "2026-01-09", "close": 1524.26, "change": "1.05%"}, {"date": "2026-01-12", "close": 1605.77, "change": "5.35%"}, {"date": "2026-01-13", "close": 1565.58, "change": "-2.50%"}, {"date": "2026-01-14", "close": 1580.87, "change": "0.98%"}, {"date": "2026-01-15", "close": 1544.84, "change": "-2.28%"}, {"date": "2026-01-16", "close": 1548.33, "change": "0.23%"}]
+### HK 指数历史
+- HSI: [{"date": "2026-01-08", "close": 26149.311, "change": "-1.17%"}, {"date": "2026-01-09", "close": 26231.791, "change": "0.32%"}, {"date": "2026-01-12", "close": 26608.48, "change": "1.44%"}, {"date": "2026-01-13", "close": 26848.471, "change": "0.90%"}, {"date": "2026-01-14", "close": 26999.811, "change": "0.56%"}, {"date": "2026-01-15", "close": 26923.619, "change": "-0.28%"}, {"date": "2026-01-16", "close": 26844.961, "change": "-0.29%"}]
+- HSTECH: [{"date": "2026-01-08", "close": 5678.34, "change": "-1.05%"}, {"date": "2026-01-09", "close": 5687.14, "change": "0.15%"}, {"date": "2026-01-12", "close": 5863.2, "change": "3.10%"}, {"date": "2026-01-13", "close": 5869.79, "change": "0.11%"}, {"date": "2026-01-14", "close": 5908.26, "change": "0.66%"}, {"date": "2026-01-15", "close": 5828.35, "change": "-1.35%"}, {"date": "2026-01-16", "close": 5822.18, "change": "-0.11%"}]
+### US 指数历史
+- .IXIC: [{"date": "2026-01-08", "close": 23480.0156, "change": "-0.44%"}, {"date": "2026-01-09", "close": 23671.3457, "change": "0.81%"}, {"date": "2026-01-12", "close": 23733.9043, "change": "0.26%"}, {"date": "2026-01-13", "close": 23709.873, "change": "-0.10%"}, {"date": "2026-01-14", "close": 23471.75, "change": "-1.00%"}, {"date": "2026-01-15", "close": 23530.0215, "change": "0.25%"}, {"date": "2026-01-16", "close": 23515.3867, "change": "-0.06%"}]
+- .DJI: [{"date": "2026-01-08", "close": 49266.1094, "change": "0.55%"}, {"date": "2026-01-09", "close": 49504.0703, "change": "0.48%"}, {"date": "2026-01-12", "close": 49590.1992, "change": "0.17%"}, {"date": "2026-01-13", "close": 49191.9883, "change": "-0.80%"}, {"date": "2026-01-14", "close": 49149.6289, "change": "-0.09%"}, {"date": "2026-01-15", "close": 49442.4414, "change": "0.60%"}, {"date": "2026-01-16", "close": 49359.3281, "change": "-0.17%"}]
+- .INX: [{"date": "2026-01-08", "close": 6921.46, "change": "0.01%"}, {"date": "2026-01-09", "close": 6966.2798, "change": "0.65%"}, {"date": "2026-01-12", "close": 6977.27, "change": "0.16%"}, {"date": "2026-01-13", "close": 6963.7402, "change": "-0.19%"}, {"date": "2026-01-14", "close": 6926.6001, "change": "-0.53%"}, {"date": "2026-01-15", "close": 6944.4702, "change": "0.26%"}, {"date": "2026-01-16", "close": 6940.0098, "change": "-0.06%"}]
+## 行业资金流向 (Top)
+- 半导体: 主力净流入 1336.87 , 主力流出 1139.55
+- 自动化设备: 主力净流入 180.49 , 主力流出 160.96
+- 工程机械: 主力净流入 41.64 , 主力流出 39.01
+- 电机: 主力净流入 56.39 , 主力流出 44.58
+- 电网设备: 主力净流入 340.89 , 主力流出 395.43
+## 宏观摘要
+- GDP: {"indicator": "China GDP", "value": 1015036.1, "growth_rate": 5.2, "period": "2025年第1-3季度", "unit": "100 Million CNY"}
+- CPI: {"indicator": "China CPI", "value": 100.8, "yoy": 0.8, "date": "2025年12月份", "unit": "Index"}
+- PMI: {"indicator": "China PMI", "manufacturing": 50.1, "non_manufacturing": 50.2, "date": "2025年12月份"}
+## 经济日历
+- 美国截至1月16日当周石油钻井总数(口) (重要度 2) 02:00
+- 美国截至1月16日当周全美钻井总数(口) (重要度 2) 02:00
+- 美国1月16日iShares白银持仓-每日更新(吨) (重要度 2) 06:30
+- 美国1月16日SPDR黄金持仓-每日更新(吨) (重要度 2) 06:30
+- 美国1月16日iShares黄金持仓-每日更新(吨) (重要度 2) 06:30
+- 美国1月15日COMEX黄金库存-每日更新(百盎司) (重要度 2) 06:30
+## 头条新闻
+- 下周解禁市值超464亿元
+- 国家能源局：2025年全社会用电量同比增长5.0%
+- 上海2025年外贸进出口值同比增长5.6% “新三样”逆势上扬
+- 半亩花田母公司向港交所递交上市申请
+- 美共和党参议员穆尔科斯基：格陵兰岛不应被视为资产
+
+```
+
+
+# Master Agent
+## 分则生产和分配任务
+
+
+# Sub Agent
+
+
+# synthesize Agent
+## 负责汇总结果，生成建议卡片，如果master没有生成报告，就补充生成一份报告
